# JARVIS.py

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.jarvis_runtime  Dockerfile.tool_runtime  README.md  docker-compose.yml  main.py  pyproject.toml
.codex/: AGENTS.md
dev_docs/: codex_backend.md  compaction_design.md  design.md  jarvis_skills.md  memory_design_doc.md  memory_doc.md  memory_pass_2.md  persistence_refector.md  project_structure.md  runtime_tools_plan.md  subagent_plan.md  tool_dev_doc.md  tool_runtime_isolation_plan.md  user_interruption_plan.md
notes/: notes.md
secrets/: README.md
src/: logging_setup.py  main.py  runtime_env.py  settings.py  workspace_paths.py
src/core/: __init__.py  agent_loop.py  compaction.py  config.py  identities.py  token_estimator.py
src/gateway/: __init__.py  __main__.py  app.py  bash_job_supervisor.py  config.py  protocol.py  route_events.py  route_runtime.py  session_router.py
src/identities/: ARMOR.md  PROGRAM.md  USER.md
src/jarvis/: __init__.py  __main__.py  actor_backends.py  logging_setup.py  main.py  runtime_env.py  settings.py  settings.yml  workspace_paths.py
src/llm/: __init__.py  config.py  errors.py  protocols.py  provider_names.py  service.py  types.py  validation.py
src/memory/: __init__.py  bootstrap.py  chunker.py  config.py  dirty_scan.py  graph.py  index_db.py  maintenance.py  markdown_store.py  reflection.py  retrieval.py  service.py  types.py
src/storage/: __init__.py  service.py  types.py
src/subagent/: bootstrap.py  manager.py  primitives.py  runtime.py  settings.py  (+2 more)
tests/: __init__.py  helpers.py  test_agent_loop.py  test_agent_loop_request_building.py  test_agent_loop_streaming.py  test_agent_loop_tools.py  test_codex_actor_runtime.py  test_codex_auth.py  test_codex_backend_config.py  test_codex_client.py  test_codex_tool_bridge.py  test_commands.py  test_compaction.py  test_config.py  test_gateway_app.py  test_gateway_main.py  test_gateway_protocol.py  test_gateway_session_router.py  test_grok_provider.py  test_llm_config.py  test_llm_service_lifecycle.py  test_lmstudio_provider.py  test_logging_setup.py  test_main.py  test_memory_pass2.py  test_memory_service.py  test_openai_provider.py  test_openrouter_provider.py  test_provider_request_shapes.py  test_settings.py  test_skills.py  test_storage_service.py  test_subagent.py  test_token_estimator.py  test_tools.py  test_ui_config.py  test_ui_formatting.py  test_ui_gateway_client.py  test_ui_telegram_api.py  test_ui_telegram_bot.py  (+1 more)
utils/: install_build.sh  jarvis_shell_wrapper.sh  migrate.sh  settings_gui.html  transcript_inspector.html
(+246 files in other folders)
