[project]
name = "repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.66.0",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "openai>=2.24.0",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
