[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis, the personal AI assistant."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.66.0",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "openai>=2.24.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[project.scripts]
jarvis = "jarvis.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]

[tool.uv.build-backend]
source-exclude = [".DS_Store"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
